# wc

./: README.md  pyproject.toml
pywc/: main.py
