[tool.poetry]
name = "pywc"
version = "0.1.0"
description = ""
authors = ["Stefani <stefanigtorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
